--- a/css/tablet.css
+++ b/css/tablet.css
@@ -53,8 +53,7 @@
     flex-wrap: wrap;
     row-gap: 72px;
     column-gap: 24px;
-    width: calc(100% - 24px / 2);
-    
+    justify-content: center;
     
 }
 
@@ -62,19 +61,29 @@
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
-    text-align: center;
 
 }
 
 .advantages-item {
-    width: calc(100% - 24px / 2);
+    width: 300px;
 }
 
-
-
-
+.about-section {
+    display: none;
 }
 
+.employees-list {
+    row-gap: 64px;
+}
+
+.team-list {
+    margin-right: 24px;
+}
+
+.customers-list {
+    row-gap: 72px;
+}
+}
 
 
 
@@ -85,7 +94,7 @@
 screen and (min-resolution: 192dpi) and (min-width: 768px),
 screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .hero-section {
-        background-image: url("../images/tablet/headerbg@2x.jpg");
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/tablet/headerbg@2x.jpg");
     }
 
 }
