--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,10 +4,10 @@
 /*------------------HEADER----------------------------*/
 
 
-.container {
+/* .container {
     padding-left: 15px;
     padding-right: 15px;
-}
+} */
 
 @media screen and (min-width: 480px) {
     .container {
@@ -215,6 +215,29 @@
 
 .description-item:not(:last-child) {
     margin-bottom: 72px;
+}
+
+.about-section {
+    display: none;
+}
+
+.team-list:not(:last-child) {
+    margin-bottom: 72px;
+}
+
+.customers-list {
+    flex-wrap: wrap;
+    row-gap: 72px;
+    
+}
+
+.customers-list-item {
+    display: flex;
+    flex-wrap: wrap;
+    height: 88px;
+    width: 190px;
+    justify-content: center;
+    
 }
 
 }
