--- a/css/tablet.css
+++ b/css/tablet.css
@@ -21,7 +21,15 @@
         justify-content: center;
     }
 
-   
+   .footer-info-box {
+       display: flex;
+   }
+
+  
+   .special {
+    display: flex;
+    flex-wrap: wrap;
+   }
 }
 
 
@@ -81,7 +89,36 @@
 }
 
 .customers-list {
+    flex-wrap: wrap;
     row-gap: 72px;
+    column-gap: 16px;
+
+}
+
+.customers-list-item {
+    display: flex;
+    flex-wrap: wrap;
+    height: 88px;
+    width: 190px;
+    justify-content: center;
+
+}
+.footer {
+    background-image: url(../images/tablet/footerbg.jpg);
+    padding-top: 96px;
+    padding-bottom: 96px;
+}
+
+
+ .footer-info {
+     margin-right: 24px;
+ }
+
+ .footer-email {
+    margin-right: 24px
+ }
+.subscribe-box {
+    display: flex;
 }
 }
 
@@ -96,5 +133,9 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .hero-section {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/tablet/headerbg@2x.jpg");
     }
+
+    .footer {
+        background-image: url(../images/tablet/footerbg@2x.jpg);
+}
 
 }
